# dpx-trans

./: .gitignore  meson.build  meson_options.txt
example/: hex_dump_example.cxx  meson.build  params.hxx  rdma_client.cxx  rdma_server.cxx  tcp_client.cxx  thread_util_example.cxx
example/tcp/: e.cxx
lib/: common.hxx  meson.build
lib/concept/: rpc.hxx
lib/doca/: check.hxx  device.cxx  device.hxx  doca_wrapper.cxx  doca_wrapper.hxx  doca_wrapper_def.hxx  simple_buffer.hxx
lib/memory/: doca_simple_buffer.hxx  simple_buffer.hxx  simple_buffer_pool.hxx
lib/priv/: common.hxx  context.cxx  context.hxx  defs.hxx  endpoint.cxx  endpoint.hxx  transport.hxx
lib/priv/doca_comch/: connection.cxx  connection.hxx  endpoint.cxx  endpoint.hxx
lib/priv/tcp/: connection.cxx  connection.hxx  endpoint.cxx  endpoint.hxx
lib/priv/verbs/: connection.cxx  connection.hxx  endpoint.cxx  endpoint.hxx
lib/util/: doca_check.hxx  doca_wrapper.cxx  doca_wrapper.hxx  doca_wrapper_def.hxx  fatal.hxx  formatter.hxx  hex_dump.hxx  logger.hxx  noncopyable.hxx  nonmovable.hxx  scope_guard.hxx  serialization.hxx  timer.hxx  unreachable.hxx
sample/: comch_dbg_client.cxx  comch_dbg_server.cxx  doca_comch_client.cxx  doca_comch_common.hxx  doca_comch_ctrl_client.cxx  doca_comch_ctrl_common.hxx  doca_comch_ctrl_path_client.cxx  doca_comch_ctrl_path_common.hxx  doca_comch_ctrl_path_server.cxx  doca_comch_ctrl_server.cxx  doca_comch_data_path_client.cxx  doca_comch_data_path_common.hxx  doca_comch_data_path_server.cxx  doca_comch_server.cxx  echo.cxx  echo.hxx  meson.build  min_comch_client.cxx  min_comch_server.cxx  rdma_client.cxx  rdma_common.hxx  rdma_server.cxx  tcp_client.cxx  tcp_common.hxx  tcp_server.cxx  zpp_bits_sample.cxx
src/: conn_holder.hxx  context.hxx  def.hxx  memory_region.hxx  meson.build  rpc.hxx  rpc_desc.hxx  rpc_helper.hxx  rpc_transport.hxx  transport.hxx
src/concepts/: rpc.hxx
src/provider/tcp/: conn_holder.cxx  conn_holder.hxx  connector.hxx  endpoint.cxx  endpoint.hxx
src/serializer/: zpp_bits_serializer.hxx
src/util/: constexpr_string.hxx  crc.hxx  enum_formatter.hxx  fatal.hxx  hex_dump.cxx  hex_dump.hxx  literal.hxx  logger.hxx  noncopyable.hxx  nonmovable.hxx  spin_lock.cxx  spin_lock.hxx  string_hash.hxx  thread_util.cxx  thread_util.hxx  timer.hxx  unreachable.hxx  upper_align.hxx
subprojects/: dbg-macro.wrap  zpp_bits.wrap
test/: meson.build  tcp.cxx  tcp_conn_holder.cxx  util_test.cxx
tool/: doca_device_probe.cxx  meson.build
