executable(
    'hex_dump_example',
    files('hex_dump_example.cxx'),
    dependencies: dpx_trans_dep,
)

executable(
    'thread_util_example',
    files('thread_util_example.cxx'),
    dependencies: dpx_trans_dep,
)

executable(
    'tcp_e',
    files('tcp/e.cxx'),
    dependencies: dpx_trans_dep,
)
